# lego-piano

./: README.md
pi-provisioner/: Vagrantfile  hosts.ini  playbook.yml
pi-provisioner/.vagrant/machines/test_pi/virtualbox/: action_set_name  id  index_uuid
piano-client/: .npmrc  package-lock.json  package.json  tsconfig.json  vite.config.ts
piano-client/src/: App.vue  main.ts  store.ts  style.css
piano-client/src/components/: AutoPlay.vue  Header.vue  SheetMusic.vue  Slider.vue  SongPicker.vue  UserInput.vue
piano-client/src/helpers/: PlayType.ts  file-utils.ts
piano-client/src/songs/: I_Saw_Three_Ships_Easy_Piano.mxl  Yankee_Doodle.mxl
piano-client/src/songs/London_Bridge_Is_Falling_Down/: score.xml
piano-server/: CMakeLists.txt  README.md  gpio.c  gpio.h  main.c  midi.c  midi.h  websocket.c  websocket.h
